@@ -38,6 +38,9 @@ BUGFIXES:
   ZOOKEEPER-480. FLE should perform leader check when node is not leading and
   add vote of follower (flavio via mahadev)
 
+  ZOOKEEPER-491. Prevent zero-weight servers from being elected. (flavio via
+  mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
